# trend-intelligence-platform

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
.github/workflows/: airflow-ci.yaml  dbt-ci.yaml  hello-ci.yaml  pr-checks.yaml  spark-ci.yaml
docs/architecture/: NORTH_STAR.md
docs/plans/: 2026-07-16-P0-platform-foundation-implementation.md  2026-07-17-P1-data-pipeline-implementation.md
docs/specs/: 2026-07-08-P0-platform-foundation-brief.md  2026-07-08-P0-platform-foundation-design.md  2026-07-08-P1-comments-ingest-addendum-brief.md  2026-07-08-P1-comments-ingest-design.md  2026-07-08-P1-data-pipeline-brief.md  2026-07-08-P1-data-pipeline-design.md  2026-07-08-P2-ml-verticals-brief.md  2026-07-08-P2-ml-verticals-design.md  2026-07-08-P3-ptt-ingest-brief.md  2026-07-08-P3-ptt-ingest-design.md  2026-07-08-P4-presentation-layer-brief.md  2026-07-08-P4-presentation-layer-design.md  2026-07-09-P7-dmp-brief.md  (+31 more)
ingestion/youtube/: pyproject.toml
ingestion/youtube/src/yt_ingest/: bronze.py  categories.py  client.py
ingestion/youtube/tests/: test_bronze.py  test_categories.py  test_client.py
lakehouse/spark/: Dockerfile  pyproject.toml
lakehouse/spark/jobs/: silver_job.py
lakehouse/spark/k8s/: rbac.yaml
lakehouse/spark/tests/: test_silver_job.py
platform/hello/: Dockerfile  pyproject.toml
platform/hello/k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml  servicemonitor.yaml
platform/hello/src/hello/: main.py
platform/hello/tests/: test_main.py
scripts/: p1-run.sh  pipeline-secrets.sh  verify-pipeline.sh  verify.sh
(+59 files in other folders)
