[project]
name = "yt-ingest"
version = "0.1.0"
description = "YouTube trending ingestion (bronze layer + categories dim)"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.28.1",
    "boto3==1.40.0",
    "psycopg2-binary==2.9.10",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_ingest"]
