[project]
name = "spark-jobs"
version = "0.1.0"
description = "Bronze to Silver Spark job"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pyspark==4.0.2",
    "pytest==9.1.1",
    "ruff==0.15.20",
]

[tool.ruff.lint.per-file-ignores]
# ENVELOPE_SCHEMA imported to assert it's part of silver_job's public surface,
# not referenced directly in assertions — ruff F401 would otherwise flag it.
"tests/*" = ["F401"]
