[project]
name = "hello"
version = "0.1.0"
description = "Platform canary service"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn==0.50.2",
    "prometheus-fastapi-instrumentator==8.0.2",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "httpx==0.28.1",
    "ruff==0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hello"]
